[package]
name = "cargo-manifmt"
description = "rustfmt for your Cargo.toml."
readme = "README.md"
version = "0.1.2-alpha.0"
authors = ["Nikhil Benesch <nikhil.benesch@gmail.com>"]
keywords = [
    "fmt",
    "format",
    "cargo",
    "manifest",
]
repository = "https://github.com/benesch/cargo-manifmt"
categories = ["development-tools::cargo-plugins"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
cargo = "0.49.0"
pathdiff = "0.1.0"
regex = "1.0"
regex-macro = "0.1.1"
semver = "0.10.0"
toml = "0.5.8"
